# living-figures

./: .gitignore  .gitmodules  Dockerfile  README.md  build.sh  pyproject.toml  requirements.txt
.github/workflows/: ext_wheels.yaml  hugo.yaml  hugo_dryrun.yaml  lint.yaml  package.yaml
ext/: build.sh  scikit_bio-0.5.8-cp311-cp311-macosx_12_0_x86_64.whl
hugo/: hugo.yaml
hugo/config/_default/: params.toml
hugo/config/production/: config.toml
hugo/content/categories/documentation/: _index.md
hugo/content/categories/genome-comparison/: _index.md
hugo/content/post/microbiome-explorer/: MicrobiomeExplorer-CMD_STEC.html  MicrobiomeExplorer-CMD_T1D.html  MicrobiomeExplorer-CMD_cirrhosis.html  MicrobiomeExplorer-base.html  PanEpigenome-CMD_STEC.html  PanEpigenome-CMD_T1D.html  PanEpigenome-CMD_cirrhosis.html  _build.py  index.md
hugo/content/post/panepigenome-browser/: build.py  index.md
hugo/content/post/what-are-living-figures/: index.md
src/living_figures/bio/: __init__.py
src/living_figures/bio/epigenome/utilities/: pacbio_file.py  (+1 more)
src/living_figures/bio/fom/: Readme.md
src/living_figures/bio/volcano/: Readme.md  app.py
src/living_figures/helpers/: __init__.py  constants.py  parse_numeric.py  permanova.py  scaling.py
src/widget_store/bio/: __init__.py
src/widget_store/bio/fom/: Readme.md
src/widget_store/bio/rebase/: Readme.md
src/widget_store/bio/volcano/: app.py  make_test_data.py  test_data_1.csv  test_data_2.csv
src/widget_store/helpers/: scaling.py  sorting.py
store/bio/volcano/: app.py  make_test_data.py
tests/: test_import.py
(+289 files in other folders)
